"Version 9: flask app modular is working, css is not working so i used CDN links, also bg img not showing, initialized db "

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-
+<style>
+    .img-bg {
+        background-image: url("{{ url_for('static', filename='img/hero/hero-5/hero-bg.svg') }}");
+        background-size: cover;
+        background-position: center;
+    }
+</style>
 <!-- Hero Section with Wave Background -->
 <section id="home" class="hero-section-wrapper-5">
-  <div class="hero-section hero-style-5 img-bg"
-       style="background-image: url('{{ url_for('static', filename='img/hero/hero-5/hero-bg.svg') }}'); background-size: cover; background-position: center;">
+  <div class="hero-section hero-style-5 img-bg">
     <div class="container py-5">
       <div class="row align-items-center">
 
@@ -30,9 +35,7 @@
 
         <!-- Right Column: Image -->
         <div class="col-lg-6 col-md-12 text-center wow fadeInUp" data-wow-delay=".5s">
-          <img src="{{ url_for('static', filename='img/hero/hero-5/hero-img.svg') }}"
-               alt="Hero Illustration"
-               class="img-fluid rounded shadow-sm">
+          <img src="{{ url_for('static', filename='img/hero/hero-5/hero-img.svg') }}" alt="Hero Illustration" class="img-fluid rounded shadow-sm">
         </div>
       </div>
     </div>
