--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
   <title>Mass Salary Prediction</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   <!-- CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-5.0.0-beta1.min.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}">
@@ -14,9 +17,15 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/tiny-slider.css') }}">
 </head>
 <body>
-
+<style>
+    body {
+        background-image: url("{{ url_for('static', filename='img/hero/hero-5/hero-bg.svg') }}");
+        background-size: cover;
+        background-position: center;
+    }
+</style>
 <!--  Navbar -->
-<nav class="navbar navbar-expand-lg bg-white shadow-sm rounded-pill mt-4 mx-4 px-4 py-2">
+<nav class="navbar navbar-expand-lg shadow-sm rounded-pill mt-4 mx-4 px-4 py-2">
   <div class="container-fluid">
 
     <!-- Title -->
@@ -30,17 +39,33 @@
     </button>
 
     <!--Links -->
+     <div class="collapse navbar-collapse justify-content-end" >
+         <ul class="navbar-nav gap-2">
+             <li class="nav-item">
+                 <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="{{ url_for('main.home') }}">Home</a>
+             </li>
+             <li class="nav-item">
+                 <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="{{ url_for('main.profile') }}">Profile</a>
+             </li>
+            <li class="nav-item">
+                <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="/predict">Predict</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="/history">History</a>
+            </li>
+         </ul>
+     </div>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav gap-2">
-        <li class="nav-item">
-          <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="/home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="/predict">Predict</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="/history">History</a>
-        </li>
+          <li class="nav-item">
+              <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="{{ url_for('auth.login') }}" >Login</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="{{ url_for('auth.signup') }}">Sign Up</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="{{ url_for('auth.logout') }}">Logout</a>
+          </li>
       </ul>
     </div>
   </div>
