"Version 13: add works"

--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -32,6 +32,11 @@
                 <input type="number" class="form-control" id="age" name="age" min="18" max="100">
               </div>
 
+              <div class="col-md-6">
+                <label for="matricule" class="form-label">Matricule</label>
+                <input type="number" class="form-control" id="matricule" name="matricule">
+              </div>
+
               <!-- Job Information -->
               <div class="col-12 mt-4">
                 <h5 class="border-bottom pb-2">Job Information</h5>
@@ -54,12 +59,12 @@
 
               <div class="col-md-6">
                 <label for="indemnite1" class="form-label">Indemnite 1 </label>
-                <input type="number" class="form-control" id="indemnite1" name="salary" step="0.01">
+                <input type="number" class="form-control" id="indemnite1" name="indemnite1" step="0.01">
               </div>
 
               <div class="col-md-6">
                 <label for="indemnite2" class="form-label">Indemnite 2</label>
-                <input type="number" class="form-control" id="indemnite2" name="salary" step="0.01">
+                <input type="number" class="form-control" id="indemnite2" name="indemnite2" step="0.01">
               </div>
 
               <div class="col-md-6">
