--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
           <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="{{ url_for('employees.list_employees') }}">Employees</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="/predict">Predict</a>
+          <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="{{ url_for('main.predict') }}">Predict</a>
         </li>
         <li class="nav-item">
           <a class="nav-link btn btn-outline-primary rounded-pill px-3 page-scroll" href="/history">History</a>
@@ -64,7 +64,8 @@
         {% else %}
           <li class="nav-item">
             <a class="nav-link btn btn-outline-success rounded-pill px-3 page-scroll" href="{{ url_for('auth.login') }}">Login</a>
-          </li><li class="nav-item">
+          </li>
+          <li class="nav-item">
             <a class="nav-link btn btn-outline-info rounded-pill px-3 page-scroll" href="{{ url_for('auth.signup') }}">Sign Up</a>
           </li>
         {% endif %}
@@ -84,5 +85,7 @@
 <script src="{{ url_for('static', filename='js/glightbox.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/tiny-slider.js') }}"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
+{% block scripts %}{% endblock %}
 </body>
 </html>
