--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,55 @@
+<!-- html -->
+<!-- Fichier: 'templates/index.html' -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Mass Salary Prediction Tool</title>
+  <meta charset="UTF-8">
+  <title>Accueil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-5.0.0-beta1.min.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/glightbox.min.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/lindy-uikit.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/LineIcons.2.0.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/tiny-slider.css') }}">
 </head>
 <body>
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top justify-content-center">
-    <div class="container">
-      <a class="navbar-brand" href="/">Mass Salary Prediction Tool</a>
-    </div>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <div class="alert alert-warning">
+        {% for message in messages %}
+          <p>{{ message }}</p>
+        {% endfor %}
+      </div>
+    {% endif %}
+  {% endwith %}
+<style>
+  div {
+    position: relative;
+  }
+  div::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 500px;
+    background-image: url('{{ url_for('static', filename='img/about/about-4/about-img.svg') }}');
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: contain;
+    margin-top: 1rem;
+  }
+</style>
+  <div class="container mt-5">
+    <h1>Bienvenue</h1>
+    <p><a class="link-opacity-100" href="{{ url_for('auth.login') }}">Se connecter</a> | <a class="link-opacity-100" href="{{ url_for('auth.signup') }}">S’inscrire</a></p>
 
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Accueil</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link">Predictions</a>
-      </li>
-    </ul>
-
-  </nav>
+  </div>
+  <!-- JS -->
+<script src="{{ url_for('static', filename='js/bootstrap-5.0.0-beta1.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/wow.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/glightbox.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/tiny-slider.js') }}"></script>
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
