--- a/templates/edit_employee.html
+++ b/templates/edit_employee.html
@@ -9,7 +9,8 @@
           <h3 class="mb-0"><i class="lni lni-pencil"></i> Edit Employee</h3>
         </div>
         <div class="card-body">
-          <form method="POST">
+          <form method="POST"  action="{{ url_for('employees.edit_employee', matricule=employee.matricule) }}">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <div class="row g-3">
               <!-- Personal Information -->
               <div class="col-12">
@@ -47,8 +48,18 @@
               </div>
 
               <div class="col-md-6">
-                <label for="salary" class="form-label">Salary (€)</label>
+                <label for="salary" class="form-label">Salary </label>
                 <input type="number" class="form-control" id="salary" name="salary" value="{{ employee.salary or '' }}" step="0.01">
+              </div>
+
+              <div class="col-md-6">
+                <label for="indemnite1" class="form-label">Indemnite 1 </label>
+                <input type="number" class="form-control" id="indemnite1" name="indemnite1" value="{{ employee.indemnite1 or '' }}" step="0.01">
+              </div>
+
+              <div class="col-md-6">
+                <label for="indemnite2" class="form-label">Indemnite 2 </label>
+                <input type="number" class="form-control" id="indemnite2" name="indemnite2" value="{{ employee.indemnite2 or '' }}" step="0.01">
               </div>
 
               <div class="col-md-6">
