"Version 19: chnaged age to date of birth + added the icon to pages that don't se bas.html"

--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -28,8 +28,8 @@
               </div>
 
               <div class="col-md-6">
-                <label for="age" class="form-label">Age</label>
-                <input type="number" class="form-control" id="age" name="age" min="18" max="100">
+                <label for="birth_date" class="form-label">birth_date</label>
+                <input type="date" class="form-control" id="birth_date" name="birth_date" min="18" max="100">
               </div>
 
               <div class="col-md-6">
