--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,6 +5,7 @@
   <title>Sign Up</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS (CDN) -->
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/favicon.svg') }}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
